          - clean up menu (don't show grid links in extra row)
          - allow wildcards in 'show_custom_vars'
          - added cgi sounds to tac page (if enabled)
          - reporting:
            - reports can now be created for every page (html, xls, ...)
          - config tool:
            - added plugin & addon manager
            - show hostgroup name on hosts service list
          - Bug Fixes
            - downtimes: fixed display of flexible downtimes
            - recurring downtimes: fixed adding downtimes on sunday
            - config tool: allowed hostgroups with register 0
            - fixed reloading pages when multiple filters used (Rupert Roesler-Schmidt)
            - fixed sounds in IE and Windows Firefox

1.34     Tue Jun 19 17:38:46 CEST 2012
          - added config item to specify mobile agents
          - added refresh url parameter to set custom refresh rate
          - Bug Fixes
            - fixed editing command lines containing quotes
            - fixed not viewing all objects when paging is disabled
            - fixed 'All types' link not working all the time
            - fixed sticky acknowledgements

1.32     Sat Jun  2 18:46:38 CEST 2012
          - added recurring downtimes
          - added in_check|notification_period to extinfo
          - added sort by status information
          - added reschedule 'now' link to extinfo page
          - added mongodb support (experimental)
            - added logcache based on mongodb (mixed mode)
          - added long plugin output to excel export
          - added child options to downtimes (Jason Lempka)
          - reporting:
            - added report editor
            - added cron editor for scheduling reports
            - report fileextension is now .rpt
          - Bug Fixes
            - fixed mobile interface (jquery version was too old)
            - fixed javascript error on comments/downtimes page
            - fixed deleting all downtimes from extinfo page